--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1>HELLO WORLD<span>.</span></h1>
+        <h1>أَهْلًا وَسَهْلًا<span>....</span></h1>
         <h2>Let's learn to code</h2>
       </div>
       
