--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p>Malang, 22 September 2020</p>
 <!--"https://www.uin-malang.ac.id"-->
 <a href="https://www.uin-malang.ac.id">Uin Malang</a>
-<img scr="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.malangtimes.com%2Fbaca%2F40529%2F20190613%2F113800%2Fversi-webometrics-2019-uin-maliki-malang-kampus-islam-negeri-terbaik-kedua-di-indonesia&psig=AOvVaw0eXDr1t9VBhCRGl24s6uQW&ust=1602042632633000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDKqYWIn-wCFQAAAAAdAAAAABAJ">
+<img scr="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/UIN-Maulana-Malik-IbrahimUIN-Malang.-Foto-Istimewadaa68fbfaa2ae9c5.jpg">
 <ul>
   <li>Matematika</li>
   <li>Fisika</li>
