--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <p>Malang, 22 September 2020</p>
 <!--"https://www.uin-malang.ac.id"-->
 <a href="https://www.uin-malang.ac.id">Uin Malang</a>
-<img scr="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/UIN-Maulana-Malik-IbrahimUIN-Malang.-Foto-Istimewadaa68fbfaa2ae9c5.jpg">
+<div class="contents-item">
+  <img scr="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/UIN-Maulana-Malik-IbrahimUIN-Malang.-Foto-Istimewadaa68fbfaa2ae9c5.jpg">
+</div> 
 <ul>
   <li>Matematika</li>
   <li>Fisika</li>
