--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <a href="https://www.uin-malang.ac.id">Uin Malang</a>
 <div class="contents-item">
   <img scr="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/UIN-Maulana-Malik-IbrahimUIN-Malang.-Foto-Istimewadaa68fbfaa2ae9c5.jpg">
-</div> 
+</div>
+<img src="https://progate.com/images/html/beginner/school.jpg">
 <ul>
   <li>Matematika</li>
   <li>Fisika</li>
