--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <p>Malang, 22 September 2020</p>
 <!--"https://www.uin-malang.ac.id"-->
 <a href="https://www.uin-malang.ac.id">Uin Malang</a>
-<img scr="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/images.jpg">
+<img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/images.jpg">
 <img src="https://progate.com/images/html/beginner/school.jpg">
 <ul>
   <li>Matematika</li>
