--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1><marquee>بحضركم<span>اهلا وسهلا</span></marquee></h1>
+        <h1><marquee> اهلا وسهلا<span>بحضركم</span></marquee></h1>
         <h2>Let's learn to code</h2>
       </div>
       
