--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
-          <li>About</li>
-          <li>Lessons</li>
-          <li>Contact us</li>
+          <li>Home</li>
+          <li>Banjari</li>
+          <li>live steaming</li>
         </ul>
       </div>
     </div>
