--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="header-list">
         <ul>
           <li>Home</li>
-          <li>Banjari</li>
-          <li>live steaming</li>
+          <li>Media</li>
+          <li>situs</li>
         </ul>
       </div>
     </div>
