--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li>Home</li>
           <li>Media</li>
-          <li>situs</li>
+          <li>Tentang Situs</li>
         </ul>
       </div>
     </div>
