--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
+          <li></li>
+          <input>
           <li>Tentang Situs</li>
           <li>Media</li>
           <li>Home</li>
