--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
-          <li></li>
-          <input>
+          <li><input></li>
           <li>Tentang Situs</li>
           <li>Media</li>
           <li>Home</li>
