--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
-          <li><input></li>
+         
           <li>Tentang Situs</li>
           <li>Media</li>
           <li>Home</li>
+          <p>cari</p>
+          <input>
         </ul>
       </div>
     </div>
