--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="header-logo">Progate</div>
       <div class="header-list">
         <ul>
-         
+          <li>Contact</li>
           <li>Tentang Situs</li>
           <li>Media</li>
           <li>Home</li>
