--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <div class="header">
-      <div class="header-logo">Progate</div>
+      <div class="header-logo">Lucky Math</div>
       <div class="header-list">
         <ul>
           <li>Contact</li>
+          <li>Chanel</li>
           <li>Tentang Situs</li>
           <li>Media</li>
           <li>Home</li>
