--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
       <div class="contents">
         <h3 class="section-title">Lessons</h3>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
-          <p>HTML & CSS</p>
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/logo7.png">
+          <p>Math Dasar</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
-          <p>PHP</p>
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/pemrograman.jpg">
+          <p>Pemrograman</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
-          <p>Ruby</p>
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/kalkulus.png">
+          <p>Kalkulus</p>
         </div>
         <div class="contents-item">
-          <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
-          <p>Swift</p>
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/statistika.jpg">
+          <p>Statistika</p>
         </div>
       </div>
       
