--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
       <div class="contents">
         <h3 class="section-title">Lessons</h3>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/logo7.png">
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/logo7.png" width="250" height="300">
           <p>Math Dasar</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/pemrograman.jpg">
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/pemrograman.jpg" width="250" height="300">
           <p>Pemrograman</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/kalkulus.png">
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/kalkulus.png" width="250" height="300">
           <p>Kalkulus</p>
         </div>
         <div class="contents-item">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/statistika.jpg">
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/statistika.jpg" width="250" height="300">
           <p>Statistika</p>
         </div>
       </div>
