--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
     <div class="main">
       <div class="copy-container">
         <h1><marquee> اهلا وسهلا<span> بحضركم</span></marquee></h1>
-        <h2>Let's learn to code</h2>
       </div>
       
       <div class="contents">
-        <h3 class="section-title">Lessons</h3>
+        <h3 class="section-title">Pembelajaran</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/logo7.png" width="250" height="300">
           <p>Math Dasar</p>
