--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </div>
 
     <div class="footer">
+      <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
       <div class="footer-logo">Progate</div>
       <div class="footer-list">
         <ul>
