--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       
-      <div class="isi">
+      <div class="contents">
         <h3 class="section-title">Pemrograman</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/logo7.png" width="250" height="300">
