--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
           <li>Media</li>
           <li>Home</li>
           <input>
+          <p>Input with icon:</p>
+          <form>
+            <input type="text" name="search" placeholder="Search..">
+          </form>
         </ul>
       </div>
     </div>
