--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="contents-item">
           <iframe width="540" height="300" src="https://www.youtube.com/watch?v=tmwIQWXPgu0">
           </iframe>
-          <p>Hrader</p>
+          <p>Header</p>
         </div>
       </div>
       
@@ -86,22 +86,17 @@
     <div class="footer">
       <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
       <div class="footer-logo">Progate</div>
+      <div class="footer-item">
+        <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/fb2.jpg" width="150" height="50">
+      </div>
       <div class="footer-list">
         <ul>
-          <li>About</li>
-          <li>Jobs</li>
-          <li>Contact us</li>
+          <li>Thanks</li>
+          <li>for</li>
+          <li>Visit</li>
         </ul>
       </div>
     </div>
-      <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        <i class="fa fa-instagram w3-hover-opacity"></i>
-        <i class="fa fa-snapchat w3-hover-opacity"></i>
-        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-        <i class="fa fa-twitter w3-hover-opacity"></i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-      </footer>
   </body>
 </html>
 
