--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
       <div class="footer-logo">Progate</div>
       <div class="footer-item">
-        <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/fb2.jpg" width="150" height="50">
+        <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/1.png" width="150" height="50">
       </div>
       <div class="footer-list">
         <ul>
