--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/1.png" width="50" height="50">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/2.webp" width="50" height="50">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/3.png" width="50" height="50">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/4.png" width="50" height="50"></>
+          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/4.png" width="50" height="50">
+        </p>
       <div class="footer-list">
         <ul>
           <li>Thanks</li>
