--- a/index.html
+++ b/index.html
@@ -85,13 +85,8 @@
 
     <div class="footer">
       <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
-      <div class="footer-logo">Progate</div>
-        <p>
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/1.png" width="50" height="50">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/2.webp" width="50" height="50">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/3.png" width="50" height="50">
-          <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/4.png" width="50" height="50">
-        </p>
+      <div class="footer-logo">Support by: <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/1.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/2.webp" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/3.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/4.png" width="50" height="50">
+      </div>
       <div class="footer-list">
         <ul>
           <li>Thanks</li>
