--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       
       <div class="contact-form">
-        <h3 class="section-title">Contact us</h3>
+        <h3 class="section-title">Masukan Saran</h3>
         <p>Email (Required)</p>
         <input>
         
