--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
       <div class="contact-form">
         <h3 class="section-title">Masukan Saran</h3>
         <p>Email (Required)</p>
-        <input>
-        
+        <input type="text" name="search" placeholder="example: muuhammad.rofiiqul@gmail.com">
         <p>Message (Required)</p>
         <textarea></textarea>
         
