--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li>Tentang Situs</li>
           <li>Media</li>
           <li>Home</li>
-          <input type="text" name="search" placeholder="Search..">
+          <input type="text" name="search" placeholder="Search.. (Muhammad Rofiiqul Mubarok 18610034)">
         </ul>
       </div>
     </div>
