--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Progate</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
@@ -19,12 +20,12 @@
         </ul>
       </div>
     </div>
+    <nav><h1><marquee> اهلا وسهلا بحضركم</marquee></h1></nav>
 
     <div class="main">
       <div class="copy-container">
         <h1><marquee> اهلا وسهلا<span> بحضركم</span></marquee></h1>
       </div>
-      
       <div class="contents">
         <h3 class="section-title">Pembelajaran</h3>
         <div class="contents-item">
