--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
     </div>
-    <nav><h1><marquee> اهلا وسهلا بحضركم</marquee></h1></nav>
+    <nav></nav>
 
     <div class="main">
       <div class="copy-container">
