--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
     </div>
-    <nav></nav>
+    <nav>...</nav>
 
     <div class="main">
       <div class="copy-container">
