--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         
       </div>
     </div>
-
+    <nav>...</nav>
     <div class="footer">
       <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
       <div class="footer-logo">Media Partner: <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/1.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/2.webp" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/3.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/4.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/11.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/6.png" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/7.jpg" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/8.jpg" width="50" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/9.png" width="60" height="50"><img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/10.jpg" width="60" height="50">
