--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       </div>
       <div class="footer-list">
         <ul>
-          <li>Thanks</li>
-          <li>for</li>
-          <li>Visit</li>
+          <li>Semangaaat</li>
+          <li>Semongkoo</li>
+          <li>Tarik siiiss</li>
         </ul>
       </div>
     </div>
