--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Progate</title>
+    <title>Lucky Math</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
@@ -24,7 +24,7 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1><marquee> اهلا وسهلا<span> بحضركم</span></marquee></h1>
+        <h1><marquee direction=”right”> اهلا وسهلا بحضركم</marquee></h1>
       </div>
       <div class="contents">
         <h3 class="section-title">Pembelajaran</h3>
