--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="main">
       <div class="copy-container">
-        <h1><marquee direction=”right”> اهلا وسهلا بحضركم</marquee></h1>
+        <h1><marquee behavior="alternate"> اهلا وسهلا بحضركم</marquee></h1>
       </div>
       <div class="contents">
         <h3 class="section-title">Pembelajaran</h3>
