--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="contact-form">
         <h3 class="section-title">Masukan Saran</h3>
         <p>Email (Required)</p>
-        <input type="text" name="search" placeholder="     example: muuhammad.rofiiqul@gmail.com">
+        <input type="text" name="search" placeholder="      example: muhammad.rofiiqul@gmail.com">
         <p>Message (Required)</p>
         <textarea></textarea>
         
@@ -82,6 +82,7 @@
         
       </div>
     </div>
+    <aside>sayayayyyyyyyyyyaaaaaaaaaaaaaaa</aside>
     <nav>...</nav>
     <div class="footer">
       <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
