--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         
       </div>
     </div>
-    <aside>sayayayyyyyyyyyyaaaaaaaaaaaaaaa</aside>
+    <aside>sayayayyyyyyyyyyaaaaaaaaaaaaaaaaaaaaaa<img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/1.png" width="50" height="50"></aside>
     <nav>...</nav>
     <div class="footer">
       <body background = "https://raw.githubusercontent.com/Iqul603/rofiiqul/master/matematika1.jpg">
