--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
         <h3 class="section-title">Pembelajaran</h3>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/logo7.png" width="255" height="285">
-          <p>Math Dasar</p>
+          <p><a href="https://kelaskita.com/index/grade/sd/">Math Dasar</a></p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/pemrograman.jpg" width="255" height="285">
-          <p>Pemrograman</p>
+          <p><a href="https://www.youtube.com/user/xkz90x/videos">Pemrograman</a></p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/kalkulus.png" width="255" height="285">
-          <p>Kalkulus</p>
+          <p><a href="https://www.youtube.com/c/Bermatematikacom/videos">Kalkulus</a></p>
         </div>
         <div class="contents-item">
           <img src="https://raw.githubusercontent.com/Iqul603/rofiiqul/master/statistika.jpg" width="255" height="285">
-          <p>Statistika</p>
+          <p><a href="https://www.youtube.com/channel/UC7asaeqntvLZGQgAz16HxgA">Statistika</a></p>
         </div>
       </div>
       
