--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="contents">
         <h3 class="section-title">Review</h3>
         <div class="contents-item">
-          <video autoplay><source src="habibi.mp4" type="video/mp4"></video>
+          <video autoplay><source src="habibi.mp4" type="video/mp4" width="250" height="150"></video>
         </div>
       </div>
       
