--- a/index.html
+++ b/index.html
@@ -58,16 +58,14 @@
           </iframe>
           <p>Struktur HTML</p>
         </div>
-        <div class="contents-item">
-          <iframe width="550" height="340" src="https://www.youtube.com/watch?v=wq5BF7wk59k">
-          </iframe>
-          <p>Intro CSS</p>
-        </div>
-        <div class="contents-item">
-          <video autoplay><source src="habibi.mp4" type="video/mp4" width="550" height="340"></video>
-          <p>Motivasi</p>
-        </div>
       </div>     
+      
+      <div class="contents">
+        <h3 class="section-title">Motivasi/h3>
+        <div class="contents-item">
+          <video autoplay><source src="habibi.mp4" type="video/mp4"></video>
+        </div>
+      </div>
       
       <div class="contact-form">
         <h3 class="section-title">Masukan Saran</h3>
