--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>     
       
       <div class="contents">
-        <h3 class="section-title">Motivasi/h3>
+        <h3 class="section-title">Motivasi</h3>
         <div class="contents-item">
           <video autoplay><source src="habibi.mp4" type="video/mp4"></video>
         </div>
